2015-01-24  Adhemerval Zanellla  <azanella@linux.vnet.ibm.com>

	[BZ #17868]
	* sysdeps/powerpc/powerpc64/dl-machine.h (resolve_ifunc): Force value
	set dependency from opd value.

2015-01-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Treat model numbers 0x4a/0x4d/0x5a/0x5d as Intel Silvermont
	architecture.

2015-01-23  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #17870]
	* nptl/sem_post.c (__new_sem_post): Replace unsigned long int
	with uint64_t.
	* nptl/sem_waitcommon.c (__sem_wait_cleanup): Replace 1UL with
	(uint64_t) 1.
	(__new_sem_wait_fast): Replace unsigned long with uint64_t.
	(__new_sem_wait_slow): Replace unsigned long int with uint64_t.
	Replace 1UL with (uint64_t) 1.
	* sysdeps/nptl/internaltypes.h (new_sem): Replace unsigned long
	int with uint64_t.

2015-01-23  Roland McGrath  <roland@hack.frob.com>

	* inet/if_index.c (if_nameindex): Add missing libc_hidden_weak.
	(if_freenameindex): Likewise.

	* resource/getrlimit64.c: Add missing libc_hidden_def.

2015-01-22  Joseph Myers  <joseph@codesourcery.com>

	* soft-fp/op-common.h (_FP_ADD_INTERNAL): Declare labels with
	__label__.
	(_FP_FMA): Likewise.
	(_FP_TO_INT_ROUND): Likewise.
	(_FP_FROM_INT): Likewise.

2015-01-21  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #16418]
	* sysdeps/unix/sysv/linux/powerpc/get_clockfreq.c (__get_clockfreq):
	Make code racy and cancel safe.

2015-01-21  Carlos O'Donell  <carlos@redhat.com>

	* sysdeps/arm/unwind-resume.h: Fix copyright year.
	* dlfcn/tst-rec-dlopen.c: Fix incorrect copyright year and
	attribution.

	* pwd/tst-getpw.c: Rewrite.

	[BZ #17702]
	* dlfcn/Makefile (tests): Add tst-rec-dlopen.
	(modules-names): Add moddummy1 and moddummy2.
	($(objpfx)tst-rec-dlopen): Define.
	* dlfcn/moddummy1.c: New file.
	* dlfcn/moddummy2.c: New file.
	* dlfcn/tst-rec-dlopen.c: New file.
	* elf/dl-cache.c (_dl_load_cache_lookup):
	Return char*. Copy result with alloca/strcpy/strdup.